--- a/site/css/css.css
+++ b/site/css/css.css
@@ -6,5 +6,37 @@
     grid-template-rows: repeat(11, 1fr);
     margin-left: auto;
     margin-right: auto;
-    background-color: hotpink;
+    background-color: red;
+}
+
+header {
+    grid-column: span 4;
+    grid-row: span 2;
+    display: grid;
+    grid-template-columns: inherit;
+    grid-template-rows: 2;
+    background-color: blue;
+}
+
+header h1 {
+    color: yellow;
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+header button {
+    grid-column: span 1;
+    grid-row: span 2;
+    color: yellow;
+    background-color: yellow;
+    border-radius: 15px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+nav {
+    grid-column: span 4;
+    grid-row: span 1;
+    background-color: yellow;
 }
