Added proper colours

--- a/site/css/css.css
+++ b/site/css/css.css
@@ -6,7 +6,7 @@
     grid-template-rows: repeat(11, 1fr);
     margin-left: auto;
     margin-right: auto;
-    background-color: red;
+    background-color: #282828;
 }
 
 header {
@@ -15,21 +15,23 @@ header {
     display: grid;
     grid-template-columns: inherit;
     grid-template-rows: repeat(2, 1fr);
-    background-color: blue;
+    background-color: #080808;
 }
 
 header h1 {
-    color: yellow;
+    color: #e57200;
     grid-column: span 2;
     grid-row: span 2;
-    font-size: 35px;
+    font-size: 30px;
+    font-family: 'Roboto Slab', serif;
+    text-align: center;
 }
 
 header button {
     grid-column: span 1;
     grid-row: span 2;
-    background-color: yellow;
-    border-radius: 15px;
+    background-color: #e57200;
+    border-radius: 9001px;
     margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -38,13 +40,14 @@ header button {
 
 a {
     text-decoration: none;
-    color: rgb(184, 184, 0);
+    color: #080808;
+    font-family: 'Roboto', sans-serif;
 }
 
 nav {
     grid-column: span 4;
     grid-row: span 1;
-    background-color: yellow;
+    background-color: #080808;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 1fr);
@@ -53,8 +56,8 @@ nav {
 nav button {
     grid-column: span 1;
     grid-row: span 1;
-    background-color: red;
-    border-radius: 25px;
+    background-color: #e57200;
+    border-radius: 9001px;
     margin-top: 5px;
     margin-bottom: 5px;
     margin-left: 5px;
@@ -65,4 +68,8 @@ nav button {
     grid-column: span 4;
     grid-row: span 1;
     margin-left: 10px;
+}
+
+.location a {
+    color: #e57200;
 }
