--- a/site/css/css.css
+++ b/site/css/css.css
@@ -16,6 +16,17 @@ header {
     grid-template-columns: inherit;
     grid-template-rows: repeat(2, 1fr);
     background-color: #080808;
+    border-style: solid;
+    border-top-color: #e57200;
+    border-left-color: #e57200;
+    border-right-color: #e57200;
+    border-bottom-color: #e57200;
+}
+
+header img {
+    grid-column: span 1;
+    grid-row: span 2;
+    margin-left: 5px;
 }
 
 header h1 {
@@ -36,12 +47,18 @@ header button {
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 20px;
+    /*border-style: solid;
+    border-top-color: #e57200;
+    border-left-color: #e57200;
+    border-right-color: #e57200;
+    border-bottom-color: #e57200;*/
 }
 
 a {
     text-decoration: none;
     color: #080808;
     font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 
 nav {
@@ -51,6 +68,9 @@ nav {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 1fr);
+    border-style: solid;
+    border-left-color: #e57200;
+    border-right-color: #e57200;
 }
 
 nav button {
@@ -67,9 +87,37 @@ nav button {
 .location {
     grid-column: span 4;
     grid-row: span 1;
-    margin-left: 10px;
+    display: grid;
+    grid-template-columns: inherit;
+    grid-template-rows: repeat(1, 1fr);
+    border-style: solid;
+    border-top-color: #e57200;
+    border-left-color: #e57200;
+    border-right-color: #e57200;
+    border-bottom-color: #e57200;
 }
 
 .location a {
     color: #e57200;
+    grid-column: span 1;
+    grid-row: span 1;
+    text-align: center;
+    margin-top: 10px;
+}
+
+main {
+    grid-column: span 4;
+    grid-row: span 6;
+    background-color: #282828;
+}
+
+footer {
+    grid-column: span 4;
+    grid-row: span 1;
+    background-color: #080808;
+    border-style: solid;
+    border-top-color: #e57200;
+    border-left-color: #e57200;
+    border-right-color: #e57200;
+    border-bottom-color: #e57200;
 }
