--- a/site/css/css.css
+++ b/site/css/css.css
@@ -165,21 +165,42 @@ main {
     grid-row: span 6;
     /*background-color: #282828;*/
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+}
+
+.background {
     background-image: url("../img/yeah.jpg");
     background-repeat: no-repeat;
     background-position: center center;
 }
 
 main h1 {
-    grid-column: span 1;
-    grid-row: 2/4;
+    grid-column: span 4;
+    grid-row: 2/7;
     font-size: 30px;
     font-family: 'Roboto Slab', serif;
     color: #080808;
     text-align: center;
     align-self: center;
+}
+
+input {
+    border-radius: 10px;
+}
+
+main input:first-child {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+main input:nth-child(2) {
+    grid-column: 2/4;
+    grid-row: 4/5;
+}
+main a {
+    grid-column: 2/4;
+    grid-row: 6/7;
 }
 
 /*main > img {
