--- a/site/css/css.css
+++ b/site/css/css.css
@@ -198,9 +198,14 @@ main input:nth-child(2) {
     grid-column: 2/4;
     grid-row: 4/5;
 }
-main a {
+main a:first-of-type {
     grid-column: 2/4;
     grid-row: 6/7;
+}
+
+main a:nth-of-type(2) {
+    grid-column: 2/4;
+    grid-row: 7/8;
 }
 
 /*main > img {
