--- a/site/css/css.css
+++ b/site/css/css.css
@@ -58,6 +58,15 @@ button {
     border-bottom-color: #00c3ff;
 }
 
+button:active {
+    color: #e57200;
+    background-color: #00c3ff;
+    border-top-color: #e57200;
+    border-left-color: #e57200;
+    border-right-color: #e57200;
+    border-bottom-color: #e57200;
+}
+
 /*header button {
     grid-column: span 1;
     grid-row: span 1;
@@ -214,7 +223,8 @@ main a:nth-of-type(2) {
     grid-row: 7/8;
 }
 
-main input.reg {
+main a.reg {
+    grid-column: 2/4;
     grid-row: 7/8;
 }
 
