Transfered the css to the sass.

--- a/v.2/site/css/css.css.scss
+++ b/v.2/site/css/css.css.scss
@@ -1,1 +1,6 @@
+@import '_grid.css.scss';
+@import '_header.css.scss';
+@import '_navigation.css.scss';
 @import '_buttons.css.scss';
+@import '_mains.css.scss';
+@import '_footer.css.scss';
