--- a/v.2/site/layout.html.erb
+++ b/v.2/site/layout.html.erb
@@ -22,6 +22,7 @@
         <div class="location">
             <a href="index.html">Hem</a>
         <%= yield %>
+        </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
         </footer>
