--- a/v.2/site/css/_grid.css.scss
+++ b/v.2/site/css/_grid.css.scss
@@ -1,7 +1,8 @@
+body {
+    margin: 0;
+}
+
 .grid {
-    margin: 0px;
-    border: 0px;
-    padding: 0px;
     width: 360px;
     height: 598px;
     display: grid;
