--- a/v.2/site/css/_map.css.scss
+++ b/v.2/site/css/_map.css.scss
@@ -1,6 +1,7 @@
 .map {
-    height: 260px;
+    height: 250px;
     width: 340px;
+    margin-top: 10px;
     margin-left: 10px;
     grid-column: 1/9;
     grid-row: 1/8;
