--- a/v.2/public/site/public/css/css.css
+++ b/v.2/public/site/public/css/css.css
@@ -11,16 +11,6 @@ body {
   margin-right: auto;
   background-color: #282828; }
 
-@media screen and (min-device-width: 361px) {
-  .grid {
-    width: 100vw;
-    height: 166vw; }
-
-  main.wide img {
-    width: 75vw; }
-  main.wide .map {
-    width: 94vw;
-    height: 42vh; } }
 header {
   grid-column: span 4;
   grid-row: span 2;
@@ -159,13 +149,6 @@ main a.reg {
 
 .wide {
   grid-template-columns: repeat(8, 1fr); }
-  .wide button {
-    grid-column: 6/8;
-    grid-row: 8/9; }
-  .wide img {
-    width: 270px;
-    grid-column: 2/8;
-    grid-row: 5/8; }
 
 p {
   grid-column: 2/8;
@@ -178,6 +161,10 @@ h3 {
   grid-column: 2/6;
   grid-row: 8/9;
   font-family: 'Roboto Slab', serif; }
+
+main.wide button {
+  grid-column: 6/8;
+  grid-row: 8/9; }
 
 h4 {
   color: #e57200;
