--- a/v.2/site/css/_mains.css.scss
+++ b/v.2/site/css/_mains.css.scss
@@ -58,6 +58,17 @@ main a.reg {
 
 .wide {
     grid-template-columns: repeat(8, 1fr);
+
+    button {
+        grid-column: 6/8;
+        grid-row: 8/9;
+    }
+
+    img {
+        width: 270px;
+        grid-column: 2/8;
+        grid-row: 5/8;
+    }
 }
 
 p {
@@ -72,11 +83,6 @@ h3 {
     grid-column: 2/6;
     grid-row: 8/9;
     font-family: 'Roboto Slab', serif;
-}
-
-main.wide button {
-    grid-column: 6/8;
-    grid-row: 8/9;
 }
 
 h4 {
